Lid command and something